samples/_failures_safe/1761794200_4479e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22d7ec17.c: In function ‘main’:
./samples/SAFE/__tmp_22d7ec17.c:136:9: error: expected declaration or statement at end of input
  136 |         printf("4. Exit\n");
      |         ^~~~~~
./samples/SAFE/__tmp_22d7ec17.c:136:9: error: expected declaration or statement at end of input
